# lineage

./: .pre-commit-config.yaml  noxfile.py  pyproject.toml
.github/workflows/: build_validation.yaml
src/awesome_package/: module.py
src/lineage/: adf.py  metadata.py
src/lineage/connectors/: mssql.py
src/lineage/dataclasses/: adf.py  metadata.py
src/reader/: file.py
src/search/: pipeline.py
src/writer/: file.py  graph.py
tests/: conftest.py  test_adf.py  test_graph.py  test_metadata.py  test_module.py  test_search.py
tests/data/: linkedservices.json  pipeline.json  pipeline_exec_pipeline.json
tests/data/datasets/: dataset.json
