[tool.poetry]
name = "lineage"
version = "0.1.0"
description = "A project that tracks lineage of ADF and DWH"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"
nox = "2024.10.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.flake8]
max-line-length = 120
count = true

[tool.mypy]
exclude = ["^noxfile\\.py$", "^tests/conftest.py$"]
