[tool.poetry]
name = "lineage"
version = "0.1.0"
description = "A project that tracks lineage of ADF and DWH"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "0.20.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"
nox = "2024.10.9"
black = "24.10.0"
isort = "5.13.2"
flake8 = "7.1.1"
mypy = "1.14.0"
yamllint = "1.35.1"
coverage = "7.6.9"
pytest = "8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.flake8]
max-line-length = 120
count = true

[tool.mypy]
exclude = ["^noxfile\\.py$", "^tests/conftest.py$"]
